Finaliza testes da Cadeira Livre